# orderly-evm-connector-python

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
examples/: config.ini  config.ini.example  example_internal.py  examples.py  examples_api.py  examples_strategy_vault.py  examples_websocket_private.py  examples_websocket_private_async.py  examples_websocket_public.py  examples_websocket_public_async.py
examples/utils/: config.py
orderly_evm_connector/: api.py  async_api.py
orderly_evm_connector/lib/: constants.py  enums.py  utils.py
orderly_evm_connector/rest/: __init__.py  _account.py  _broker.py  _campaign.py  _delegate_signer.py  _general.py  _internal.py  _liquidation.py  _market.py  _notifications.py  _onchain.py  _referral.py  _rewards.py  _settlement.py  _strategy_vault.py  _system.py  _trade.py  _wallet.py
orderly_evm_connector/websocket/: async_websocket_manager.py  orderly_socket_manager.py  websocket_client.py  websocket_client_async.py
orderly_evm_connector/websocket/websocket_api/: __init__.py  _private_stream.py  _stream.py
requirements/: common.txt
tests/: test_api.py  utils.py
tests/rest/: test_accounts.py  test_broker.py  test_delegate_signer.py  test_fee.py  test_general.py  test_ip_restrictions.py  test_liquidation.py  test_market.py  test_order.py  test_referral.py  test_settlement.py  test_strategy_vault.py  test_withdraw.py  ut_broker.py  ut_wallet.py
