[project]
name = "orderly-evm-connector"
version = "0.2.2"
description = "This is a lightweight library that works as a connector to Orderly API and Websocket."
authors = [
    {name = "Orderly Tech"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "eth-account (>=0.10.0,<0.11.0)",
    "web3 (>=6.13.0,<7.0.0)",
    "base58 (>=2.1.1,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "websocket-client (>=1.7.0,<2.0.0)",
    "aiohttp (>=3.9.5,<4.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "cryptography (>=42.0.8,<43.0.0)",
    "sync-to-async (>=0.1.1,<0.2.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
responses = "^0.25.7"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "orderly_evm_connector",
]